ポイントを後で追加できるように修正。細かいバグを修正

--- a/banmeshi/banmeshi/ViewControllers/MenuDetail/MenuDetailViewController.xib
+++ b/banmeshi/banmeshi/ViewControllers/MenuDetail/MenuDetailViewController.xib
@@ -15,6 +15,7 @@
                 <outlet property="introductionTableView" destination="9K8-Sb-cRl" id="Kf9-FV-pzc"/>
                 <outlet property="lineView" destination="EkS-Ws-KYp" id="myc-UC-nZV"/>
                 <outlet property="menuImage" destination="L2Z-AD-5JR" id="A8g-Fd-VJy"/>
+                <outlet property="pointLabel" destination="Daw-VF-5Ar" id="r3e-YU-3Rf"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -116,6 +117,15 @@
                         <action selector="tapEditBtn:" destination="-1" eventType="touchUpInside" id="kKe-vt-hTj"/>
                     </connections>
                 </button>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="本菜得分：10" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Daw-VF-5Ar">
+                    <rect key="frame" x="147" y="470" width="120" height="21"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="120" id="RNn-mz-84b"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <color key="textColor" red="0.94117647059999998" green="0.48627450979999998" blue="0.60392156860000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" red="0.96862745098039216" green="0.96862745098039216" blue="0.92156862745098034" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -125,6 +135,7 @@
                 <constraint firstItem="Orz-Hd-Fp2" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="Ehw-mg-lbI"/>
                 <constraint firstItem="9K8-Sb-cRl" firstAttribute="top" secondItem="Oqg-c5-0Aj" secondAttribute="bottom" id="FcB-oB-t2Q"/>
                 <constraint firstItem="Jdl-lZ-Sg8" firstAttribute="top" secondItem="L2Z-AD-5JR" secondAttribute="bottom" constant="5" id="Gd4-Xd-cHN"/>
+                <constraint firstItem="Daw-VF-5Ar" firstAttribute="top" secondItem="ZIb-Re-4hy" secondAttribute="bottom" constant="10" id="GgV-k7-sXN"/>
                 <constraint firstItem="Jdl-lZ-Sg8" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="Ic8-fg-oaI"/>
                 <constraint firstItem="L2Z-AD-5JR" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="LSF-cv-bc9"/>
                 <constraint firstItem="9K8-Sb-cRl" firstAttribute="top" secondItem="ZIb-Re-4hy" secondAttribute="bottom" constant="60" id="M98-Km-ekJ"/>
@@ -138,6 +149,7 @@
                 <constraint firstItem="L2Z-AD-5JR" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="bz9-eI-kKa"/>
                 <constraint firstItem="9K8-Sb-cRl" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="cKG-zj-Ed9"/>
                 <constraint firstAttribute="trailing" secondItem="Orz-Hd-Fp2" secondAttribute="trailing" id="h3R-1U-Av2"/>
+                <constraint firstItem="Daw-VF-5Ar" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="hNi-7o-VNY"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="xHb-4R-pRF" secondAttribute="trailing" id="hXa-gi-lTU"/>
                 <constraint firstItem="ZIb-Re-4hy" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="20" id="hiQ-5Z-SHv"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="EkS-Ws-KYp" secondAttribute="trailing" id="jKv-UZ-sCr"/>
